--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-  "rewrites": [
-    { "source": "/users/(.*)", "destination": "/api/index.js" },
-    { "source": "/auth/(.*)", "destination": "/api/index.js" },
-    { "source": "/course/(.*)", "destination": "/api/index.js" },
-    { "source": "/contact/(.*)", "destination": "/api/index.js" },
-    { "source": "/(.*)", "destination": "/index.html" }
+  "version": 2,
+  "builds": [
+    { "src": "src/server.ts", "use": "@vercel/node" },
+    { "src": "public/index.html", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "src/server.ts" },
+    { "src": "/(.*)", "dest": "public/index.html" }
   ]
 }
