--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "src/server.ts", "use": "@vercel/node" },
-    { "src": "public/index.html", "use": "@vercel/static" }
-  ],
+  "builds": [{ "src": "src/server.ts", "use": "@vercel/node" }],
   "routes": [
     { "src": "/api/(.*)", "dest": "src/server.ts" },
     { "src": "/(.*)", "dest": "public/index.html" }
