--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,15 @@
 {
   "version": 2,
-
   "builds": [
     {
-      "src": "dist/server.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/server.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      "dest": "api/index.js"
     }
   ]
 }
