--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "scripts": {
-    "dev": "ts-node src/server.ts",
-    "build": "npx tsc",
-    "start": " node dist/server.js"
+    "prebuild": "rimraf ./dist",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "predev": "npm run build",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
-    "mongoose": "^8.19.4"
+    "mongoose": "^8.19.4",
+    "rimraf": "^6.1.0"
   }
 }
