--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,8 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.js"
-    }
+    { "src": "/course", "dest": "/api/course" },
+    { "src": "/users", "dest": "/api/users" },
+    { "src": "/api/(.*)", "dest": "dist/server.js" }
   ]
 }
