--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "functions": {
+    "server.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "rewrites": [{ "source": "/(.*)", "destination": "/server.js" }],
   "version": 2,
 
   "builds": [
